force-app/main/default/objects/Bill_To_Addresse__mdt/Bill_To_Addresse__mdt.object-meta.xml
<CustomObject>
    <label>Bill To Address</label>
    <pluralLabel>Bill To Addresses</pluralLabel>
</CustomObject>