force-app/main/default/objects/Bill_To_Addresse__mdt/fields/River_Bill_To_Address3__c.field-meta.xml
<CustomField>
    <fullName>River_Bill_To_Address3__c</fullName>
    <label>River Bill To Address3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>