force-app/main/default/objects/Bill_To_Addresse__mdt/fields/River_billToAddress3__c.field-meta.xml
<CustomField>
    <fullName>River_billToAddress3__c</fullName>
    <label>River billToAddress3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>