force-app/main/default/objects/Bill_To_Addresse__mdt/fields/River_billToadress2__c.field-meta.xml
<CustomField>
    <fullName>River_billToadress2__c</fullName>
    <label>River billToadress2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>