force-app/main/default/objects/Bill_To_Addresse__mdt/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>